--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,1 @@
-body {
-  background-color: lightblue;
-}
-
-h1 {
-  color: navy;
-  margin-left: 20px;
-}
-
-p {
-  font-family: Arial;
-  font-size: 20px;
-}
+nul
